assets/sass/cs.scss
/* ... */
.cs-update{
	background: lightYellow;
	border: 1px solid #E6DB55;
}

.cs-error{
	background: #FFEBE8;
	border: 1px solid #C00;
}


/**
 * =============================================================================
 * == Toolbar
 * =============================================================================
 */


.cs-toolbar {
	color: #333;
	padding: 0;
	background: #FCFCFC;
	border-top: 1px solid #E5E5E5;

	&:after {
		display: table;
		content: '';
		clear: both;
	}
}

.closed .cs-toolbar {
	display: none;
}

.cs-toolbar {
	.cs-tool {
		text-decoration: none;
		line-height: 40px;
		height: 40px;
		padding: 0 10px;
		white-space: nowrap;
		background: #FFF;
		position: relative;
		overflow: hidden;
	}

	.dashicons {
		line-height: 40px;
	}

	.cs-separator {
		border-left: 1px solid #E5E5E5;
		width: 1px;
		padding: 0;
		margin: 0;
		height: 40px;
		overflow: hidden;
		display: inline-block;
		color: #ddd;
	}
}

.cs-custom-sidebar .cs-tool,
.cs-custom-sidebar .cs-separator {
	float: right;
}

.cs-theme-sidebar .cs-tool,
.cs-theme-sidebar .cs-separator {
	float: left;
}

.cs-toolbar {
	.delete-sidebar {
		color: #A00;
	}

	.delete-sidebar:hover,
	.delete-sidebar:focus,
	.delete-sidebar:active {
		color: #F00;
	}
}

.cs-toolbar .cs-tool.btn-replaceable {
	color: #555;
	&:hover {
		color: #333 !important;
	}
}

.replaceable {
	.cs-toolbar .cs-tool.btn-replaceable {
		background: lighten(#05c944, 56%);
		color: #333;
	}
}

.replace-tip-box {
	float: left;
}

.replace-tip {
	width: 200px;
}


/**
 * =============================================================================
 * == Button styles
 * =============================================================================
 */


.csb .button {
	outline: 0;
}

.csb .button > .dashicons,
.csb .button-primary > .dashicons,
.csb .button-secondary > .dashicons {
	opacity: .75;
	line-height: 26px;
	margin-right: 5px;

	-webkit-transition: opacity .2s;
	-moz-transition: opacity .2s;
	-o-transition: opacity .2s;
	transition: opacity .2s;
}

.csb .button:hover > .dashicons,
.csb .button-primary:hover > .dashicons,
.csb .button-secondary:hover > .dashicons {
	opacity: 1;
}


/**
 * =============================================================================
 * == RTL Styles
 * =============================================================================
 */


.rtl {
	div.widget-liquid-right {
		float: left;
		right: auto;
		left: 0;
	}
	&.widgets-php {
		#wpcontent {
			.wrap {
				.cs-wrap {
					margin-right: 2px;
					margin-left: 68%;
				}
			}
		}
		.widget-liquid-right {
			margin: -10px 0 0 -214%;
		}
		#widgets-left {
			margin-left: 0 !important;
		}
		&.folded {
			#wpcontent,
			#wpfooter {
				margin-left: 325px;
				margin-right: 52px;
			}
		}
	}
	#cs-title-options h2 {
		margin-right: 5px;
	}
	#cs-options {
		.cs-filter {
			float: left;
		}
		.cs-action {
			margin-right: 0;
			margin-left: 20px;
		}
	}
	.sidebar-form .submit {
		text-align: left;
	}
	#TB_ajaxWindowTitle {
		float: right;
	}
	#TB_closeAjaxWindow {
		float: left;
	}
}

/**
 * =============================================================================
 * == Export/Import
 * =============================================================================
 */


.csb-export-head {
	min-width: 450px;
}

.csb-export-head th {
	vertical-align: top;
	text-align: right;
	color: #679;
	width: 150px;
}

.csb-export-head tr:hover {
	background: #FAFAFA;
}

.csb-export-head ul {
	margin: 0;
}

.csb-export-head .dashicons.hint {
	font-size: 12px;
	line-height: 22px;
}

.csb-form {
	padding-left: 15px;
}

.csb-form h2,
.csb-form h3,
.csb-form .form-buttons,
#poststuff .csb-form h2,
#poststuff .csb-form h3,
#poststuff .csb-form .form-buttons {
	padding-left: 0;
	margin-left: -15px;
}

.form-buttons {
	clear: both;
}

.show-infos {
	position: relative;
	display: inline-block;
	margin: 0 5px;
}

h2 .show-infos {
	top: 4px;
}

.show-infos .export-infos {
	position: absolute;
	top: -5px;
	left: 30px;
	font-size: 13px;
	line-height: 1.4em;
	font-weight: normal;
	background: #FFF;
	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
	border: 3px solid #FAFAFA;
	padding: 5px;
	z-index: 10;
}

.show-infos .export-infos:before,
.show-infos .export-infos:after {
	content: '';
	position: absolute;
	left: -17px;
	top: 5px;
	border: 7px solid rgba(0, 0, 0, 0);
	border-right-color: #FAFAFA;
	z-index: 1;
}

.show-infos .export-infos:after {
	left: -18px;
	top: 5px;
	border-right-color: rgba(0,0,0,0.15);
	z-index: 0;
}

.show-infos:hover .export-infos {
	display: block !important;
}

.export-infos .section {
	font-weight: bold;
	margin: 10px 0 5px -2px;
	color: #666;
}


/**
 * =============================================================================
 * == Location popup
 * =============================================================================
 */

.cs-half {
	float: left;
	width: 49%;
	margin-right: 1%;
}

.cs-replaceable {
	margin-bottom: 5px;
}

.cs-replaceable > .details {
	display: none;
	margin: 5px 0;
}

.cs-replaceable.open > .details {
	display: block;
}

.popup-content {
	.message {
		&.no-sidebars {
			font-size: 1.4em;
		}
	}
}

/**
 * =============================================================================
 * == Post list
 * =============================================================================
 */

#wpbody-content .wp-list-table {
	&.fixed {
		@media screen and (max-width: 782px) {
			.column-cs_replacement {
				display: none;
			}
		}
	}
	.column-cs_replacement {
		width: 10%;
		dt {
			opacity: .8;
			color: #666;
		}
		dd {
			margin-left: 10px;
		}
	}
	.inline-edit-row {
		fieldset.cs-quickedit {
			border-top: 1px solid #eee;
			margin-top: 10px;
			padding-top: 10px;
			label {
				span.title {
					display: block;
					float: left;
					min-width: 5em;
					white-space: nowrap;
					padding-right: 10px;
					width: auto;
				}
			}
		}
	}
	.inline-edit-row-page {
		.inline-edit-col-right {
			float: right;
		}
	}
}

